# tanmatsu-musicalkeyboard

./: .gitignore  CLAUDE.md  CMakeLists.txt  I2S_HOWTO.md  Makefile  README.md  convert_logo.py  esp_idf_project_configuration.json
.vscode.template/: c_cpp_properties.json  settings.json
main/: CMakeLists.txt  bounce_sounds.h  idf_component.yml  logo_image.h  main.c  modplayer_esp32.c  modplayer_esp32.h  popcorn_remix_mod.h
partition_tables/: mch2022.csv
